# agentmaker

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  installation.md
docs/en/: installation.md
docs/en/guides/: agents.md  context-engineering.md  guardrails-and-hitl.md  llm-clients.md  memory.md  observability.md  prompts.md  quickstart.md  retrieval-and-rag.md  scope-and-async.md  skills.md  structured-output.md  tools.md
docs/en/reference/: config.md  core.md  memory.md  retrieval.md  runtime.md  skills.md  tools.md
docs/guides/: guardrails-and-hitl.md  llm-clients.md  memory.md  observability.md  quickstart.md  retrieval-and-rag.md  skills.md  testing.md  tools.md
docs/javascripts/: extra.js
docs/reference/: agents.md  context.md  prompts.md  rag.md  testing.md
docs/stylesheets/: extra.css
docs/zh/: index.md  installation.md  reference.md
docs/zh/guides/: agents.md  context-engineering.md  guardrails-and-hitl.md  llm-clients.md  memory.md  observability.md  prompts.md  quickstart.md  retrieval-and-rag.md  scope-and-async.md  skills.md  structured-output.md  testing.md  tools.md
examples/: 01_quickstart.py  02_tools_and_registry.py  03_structured_output.py  04_memory.py  05_rag.py  06_workflows.py  07_guardrails_and_hitl.py  08_prompt_packs.py  09_async.py  10_scope_isolation.py  11_multi_agent.py  12_sessions.py  13_observability.py  14_run_policy.py  15_declarative_spec.py  16_skills.py
overrides/: main.html
overrides/partials/: alternate.html
scripts/: check_docs_links.py  check_imports.py
src/agentmaker/: __init__.py  config.py  testing.py
src/agentmaker/agents/: __init__.py  agent.py  base.py  result.py  spec.py
src/agentmaker/context/: __init__.py  builder.py  history_compactor.py  mmr.py  reducer.py  sources.py  types.py  window_budget.py
src/agentmaker/core/: __init__.py  aio.py  clock.py  exceptions.py  llm_clients.py  llm_response.py  message.py  multimodal.py  sqlite_util.py  text.py  trace_events.py
tests/: conftest.py  test_abc_improvements.py  test_agents.py  test_aio.py  test_async_seams.py  test_cli_hardening.py  test_config.py  test_context.py  test_core.py  test_devtools.py  test_from_config.py  test_mcp_integration.py  test_memory.py  test_message.py  test_multimodal.py  test_notes_integration.py  test_observability.py  test_profiles.py  test_prompts.py  test_public_api.py  test_rag.py  test_rag_loader_extras.py  test_retrieval.py  test_run_policy.py  test_runtime.py  test_security.py  test_skills.py  test_storage_schema.py  test_streaming_tool_loop.py  test_testing.py  test_tool_decorator.py  test_tool_emulation.py
(+83 files in other folders)
