[project]
name = "agentmaker"
dynamic = ["version"]
description = "A general-purpose Python framework for building LLM agents and multi-agent systems, with tools, memory, retrieval / RAG, context engineering, guardrails, human-in-the-loop, and observability."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "xinhuang" }]
keywords = ["agent", "llm", "framework", "rag", "memory", "tools", "function-calling", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Core batteries, installed by default (LLM calls, structured output, local retrieval, tool-arg validation).
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "sqlite-vec>=0.1.9",
    "jieba>=0.42.1",
    "pyyaml>=6.0",
]

# Optional extras, each imported lazily: pip install "agentmaker[anthropic]" / [rag] / [all] ...
[project.optional-dependencies]
anthropic = ["anthropic>=0.105.2"]
gemini = ["google-genai>=2.7.0"]
rerank = ["cohere>=7.0.2"]
mcp = ["mcp>=1.27.2"]
search = ["ddgs>=9.0.0", "tavily-python>=0.7.24", "requests>=2.34.2", "serpapi>=1.0.2"]
rag = ["markitdown[pdf,docx]>=0.1.6"]
otel = ["opentelemetry-api>=1.42.1", "opentelemetry-sdk>=1.42.1"]
devtools = ["fastapi>=0.136", "uvicorn[standard]>=0.30"]
all = ["agentmaker[anthropic,gemini,rerank,mcp,search,rag,otel,devtools]"]

[project.urls]
Homepage = "https://xinhuangcs.github.io/agentmaker/"
Documentation = "https://xinhuangcs.github.io/agentmaker/"
Repository = "https://github.com/xinhuangcs/agentmaker"
Changelog = "https://github.com/xinhuangcs/agentmaker/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/agentmaker/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmaker"]
exclude = ["**/README_zh.md"]

[tool.hatch.build.targets.sdist]
only-include = ["src/agentmaker", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]
exclude = ["**/README_zh.md"]

[dependency-groups]
dev = ["pytest>=9.0.3", "python-dotenv>=1.2.2"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.3.1",
    "mkdocstrings[python]>=0.27",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
